listo el js (creo) y arreglos de css y html

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   <body class="body">
     <div class="carta">
       <h1>Combinaciones:</h1>
+      <p id="dominios">posibles combinaciones</p>
+      <button></button>
     </div>
-    <script></script>
+
+    <script src="/src/app.js"></script>
   </body>
 </html>
